Url overlow in popup, fixes #4
URL now has max-width and text-overflow set to ellipsis, so that it is not cut off in a messy way anymore.

--- a/popup.css
+++ b/popup.css
@@ -29,6 +29,9 @@ div#favicon {
 
 div#url {
 	display: inline-block;
+	max-width: 220px;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 div#current-url {
